--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,7 @@ dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter:5.8.2'
     testImplementation 'com.codeborne:selenide:6.3.5'
     testImplementation 'io.qameta.allure:allure-selenide:2.16.1'
+    testImplementation 'com.github.javafaker:javafaker:1.0.2'
 }
 
 test {
