--- a/build.gradle
+++ b/build.gradle
@@ -12,7 +12,7 @@ compileTestJava.options.encoding = "UTF-8"
 
 allure {
     version = '2.16.1'
-    useJunit5 {
+    useJUnit5 {
         version = '2.16.1'
     }
 }
@@ -24,7 +24,7 @@ repositories {
 dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter:5.8.2'
     testImplementation 'com.codeborne:selenide:6.3.5'
-    testImplementation 'io.qameta.allure:allure-selenide:2.16.1'
+    testImplementation 'io.qameta.allure:allure-selenide:2.17.3'
     testImplementation 'com.github.javafaker:javafaker:1.0.2'
 }
 
